// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renders default layout 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        A card
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`2. Renders default layout with placeholder 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        uri=""
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        A card
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`3. Renders without an image (null) 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        uri=""
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        No image
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`4. Renders without an image (showImage is false) 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        No image
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`5. Renders without an image (uri is null) 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        uri=""
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        No URL
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`6. Renders with a reversed layout 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": "auto",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        A card
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
  </View>
</FadeIn>
`;

exports[`7. Renders with a reversed layout with no image 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": "auto",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        A card
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`8. Renders a loading state 1`] = `
<Loading
  contentContainerClass=""
  imageContainerClass=""
  imageRatio={0.6666666666666666}
  isReversed={false}
  showImage={true}
/>
`;

exports[`9. Renders a loading component 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 10,
        "minWidth": "100%",
      }
    }
  >
    <TimesImage
      aspectRatio={0.6666666666666666}
      uri=""
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 0,
        "minWidth": "100%",
      }
    }
  >
    <Gradient
      degrees={264}
      style={
        Object {
          "height": 24,
          "marginBottom": 10,
          "maxWidth": 300,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 0,
          "maxWidth": 240,
        }
      }
    />
  </View>
</View>
`;

exports[`10. Renders a loading component with no image 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 0,
        "minWidth": "100%",
      }
    }
  >
    <Gradient
      degrees={264}
      style={
        Object {
          "height": 24,
          "marginBottom": 10,
          "maxWidth": 300,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 0,
          "maxWidth": 240,
        }
      }
    />
  </View>
</View>
`;

exports[`11. Renders a reversed loading component 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 10,
        "minWidth": "100%",
      }
    }
  >
    <Gradient
      degrees={264}
      style={
        Object {
          "height": 24,
          "marginBottom": 10,
          "maxWidth": 300,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 0,
          "maxWidth": 240,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 0,
        "minWidth": "100%",
      }
    }
  >
    <TimesImage
      aspectRatio={0.6666666666666666}
      uri=""
    />
  </View>
</View>
`;

exports[`12. Renders a reversed loading component with no image 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-end",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 10,
        "minWidth": "100%",
      }
    }
  >
    <Gradient
      degrees={264}
      style={
        Object {
          "height": 24,
          "marginBottom": 10,
          "maxWidth": 300,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 10,
        }
      }
    />
    <Gradient
      degrees={267}
      style={
        Object {
          "height": 10,
          "marginBottom": 0,
          "maxWidth": 240,
        }
      }
    />
  </View>
</View>
`;

exports[`Card tests on android should not re-render when imageRatio prop is changed 1`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        Do not re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;

exports[`Card tests on android should not re-render when imageRatio prop is changed 2`] = `
<FadeIn>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 10,
          "minWidth": "100%",
        }
      }
    >
      <TimesImage
        aspectRatio={0.6666666666666666}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginBottom": 0,
          "minWidth": "100%",
        }
      }
    >
      <Text>
        Do not re-render me
      </Text>
    </View>
  </View>
</FadeIn>
`;
